[package]
name = "sompp"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
clap = { version = "4.3.10", features = ["derive"] }
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
serde = { version = "1.0.163", features = ["derive"] }
