[package]
name = "sompp"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.21.2"
chrono = { version = "0.4.26", features = ["serde"] }
rand = "0.8.5"
regex = "1.9.1"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
serde = { version = "1.0.163", features = ["derive"] }
sha2 = "0.10.7"
