[package]
name = "sompp-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.21.2"
chrono = { version = "0.4.26", default-features = false, features = ["std", "serde"] }
fastrand = "2.0.0"
serde = { version = "1.0.163", features = ["derive"] }
sha2 = "0.10.7"
ureq = { version = "2.7.1", default-features = false, features = ["tls", "json"] }
#wry = { version = "0.30.0", default-features = false }
